argocd/applications/client-projects/elwis-dev/ingress-docs-oauth2-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-elwis-data-receiver-dev-api-docs-oauth2-proxy
  namespace: elwis-dev
  labels:
    app: elwis-data-receiver-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-staging"

    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
spec:
  tls:
    - hosts:
      - elwis-api-dev.tcc-clinicalsolutions.de
      secretName: elwis-api-dev-tls
  rules:
    - host: elwis-api-dev.tcc-clinicalsolutions.de
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: elwis-api-dev-oauth2-proxy
                port:
                  number: 80
